--- a/Project_Flow/templates/Project_Flow/login.html
+++ b/Project_Flow/templates/Project_Flow/login.html
@@ -49,7 +49,7 @@
 								</div>
 								<div class="w-50 text-md-right">
 									<div class="text-center mb-4">
-                                    <a href ="{% url 'demo_user'%}">Sign in as Demo User</a>
+                                    <a href ="{% url 'Admin'%}">Sign in as Demo User</a>
                                     </div>
 								</div>
                                 
